[package]
name = "aurum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
bs58 = "0.5"
bincode = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3"
hex = "0.4"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
parking_lot = "0.12"
rand = "0.8"
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "fs", "net", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[profile.release]
lto = true
codegen-units = 1
